# customgpt-ui

./: .gitignore  ANALYTICS_USAGE.md  API_IMPLEMENTATION_ROADMAP.md  COMMIT_MESSAGE.md  COMPONENT_SPECIFICATIONS.md  DEBUGGING_GUIDE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_PLAN.md  README.md  README.old.md  SYSTEM_DESIGN.md  TEST_INSTRUCTIONS.md  WIDGET-ARCHITECTURE.md  api-gap-analysis.md  customgpt_postman_collection.json  debug_analytics.md  demo-branding.html  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  query.md  query2.md  query3.md  query4.md  quick-start.html  simplified-demo.html  tailwind.config.js  test-api-integration.html  test-conversation-management.html  test-floating-fix.html  test-isolation-demo.html  test-isolation.html  test-multi-widget.html  test-react-integration.html  test-widget-conversations.html  test-widget-isolation.html  test-widget.html  webpack.iframe.js  webpack.widget.js
customgpt-api-sdks-main/customgpt-client/: README.md  pyproject.toml
customgpt-api-sdks-main/customgpt-client/customgpt_client/: __init__.py  client.py
customgpt-api-sdks-main/customgpt-client/customgpt_client/models/: __init__.py  conversation.py  create_conversation_json_body.py  create_conversation_response_201.py  create_conversation_response_201_data.py  create_conversation_response_201_status.py  (+600 more)
customgpt-api-sdks-main/customgpt-client/tests/: credentials.py  test_citations.py  test_conversations.py  test_page_metadata.py  test_pages.py  test_plugins.py  test_project_settings.py  test_projects.py  test_sources.py  test_users.py
(+176 files in other folders)
